--- a/style/home-page.css
+++ b/style/home-page.css
@@ -37,9 +37,10 @@ body {
 }
 .header {
     background-image: url(/img/medical-people-collection-collage.jpg);
-    background-position: left;
-    background-size: cover;
+    background-position:left;
+    background-size: contain;
     min-height: 150px;
+    background-repeat: round;
 }
 .content {
     
